--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,20 @@
 .container {
   display: flex;
-
+  width: 75vw;
+  justify-content: space-around;
+  background-color:false;
+}
+.card{
+  color: rgb(214, 55, 50);
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+.card-controls{
+  margin-top: 10px;
+  margin-left: 50px;
+  width:20vw;
+  /*background-color: cornflowerblue;*/
+  justify-content: space-evenly;
+  display: flex;
 }
