--- a/client/src/components/CardNavigation/CardNavigation.css
+++ b/client/src/components/CardNavigation/CardNavigation.css
@@ -1,8 +1,9 @@
 .card-nav{
-    width : 20vw;
+    width : 10vw;
     background-color: cadetblue;
     margin-top: 50px;
     margin-left: 50px;
+    color: white;
     padding-top: 20px;
     padding-bottom: 20px;
 
