--- a/client/src/components/Flashcard/FlashCard.css
+++ b/client/src/components/Flashcard/FlashCard.css
@@ -1,6 +1,6 @@
 .Fcard {
     /*color:cadetblue;*/
-    background-color: candetblue;
+    background-color: cadetblue;
     width: 600px;
     height: 200px;
     margin-top: 50px;
