updated text color & background image

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,11 +1,13 @@
 .container {
   display: flex;
-  width: 75vw;
-  justify-content: space-around;
-  background-color:false;
+  width: 100vw;
+  justify-content: middle;
+  
+  background-image: url(https://placekitten.com/100/100);
+  background-blend-mode: color-burn;
 }
 .card{
-  color: rgb(214, 55, 50);
+  border-radius: 1%;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -13,8 +15,8 @@
 .card-controls{
   margin-top: 10px;
   margin-left: 50px;
+  color: antiquewhite(22, 116, 19);
   width:20vw;
-  /*background-color: cornflowerblue;*/
   justify-content: space-evenly;
   display: flex;
 }
