--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,22 +1,18 @@
 .container {
   display: flex;
-  width: 100vw;
-  justify-content: middle;
-  
-  background-image: url(https://placekitten.com/100/100);
-  background-blend-mode: color-burn;
+  width: 75vw;
+  justify-content: space-around;
 }
-.card{
-  border-radius: 1%;
+
+.card-container {
   display: flex;
-  align-items: center;
   flex-direction: column;
+  align-items: center;
 }
-.card-controls{
+
+.card-controls {
   margin-top: 10px;
-  margin-left: 50px;
-  color: antiquewhite(22, 116, 19);
-  width:20vw;
-  justify-content: space-evenly;
+  width: 20vw;
   display: flex;
+  justify-content: space-evenly;
 }
